# bart

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_docs.sh  main.py  manager.py  pickle_job.py  pickle_manager.py  process.py  pyproject.toml  requirements-dev.txt  setup.py  test.py  test_run.sh
.github/workflows/: docs.yml
bart/: __init__.py  __main__.py  batchjob.py  manager.py
bart/check_progress/: __main__.py
bart/example/: __init__.py  filejob.py
bart/merge/: __init__.py  __main__.py
docs/: .gitignore  DOCUMENTATION.md  README.md  api.rst  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  requirements.txt  usage.rst
experiments/: bad_fits.ipynb  comp_speed.ipynb  inspect_hits.ipynb  inspect_logs.ipynb  read_attr_speed.ipynb  read_speed.ipynb  sample-stats.ipynb  sample_input.txt  satcheck-post-merge.ipynb  satellite_analysis.ipynb  starlink_launches.csv  test.py  width_estimate.ipynb
rfi_pipeline/: __init__.py  __main__.py  batchjob.py  filejob.py  main.py  manager.py  process.py
rfi_pipeline/check_progress/: __main__.py
rfi_pipeline/example/: __init__.py  filejob.py
rfi_pipeline/merge/: __init__.py  __main__.py
